# csi-http-server

./: CMakeLists.txt  README.md  build_linux.sh  rebuild_win64_vc12.bat
csi_http_server/: CMakeLists.txt  connection.cpp  connection.h  header.h  http_connection.h  http_server.h  https_connection.h  https_server.h  reply.cpp  reply.h  request.h  request_handler.h  server.h
csi_http_server/utils/: uri_pattern.h
samples/: CMakeLists.txt
samples/avro_defs/: gen_avro.bat  hello_world_request.h  hello_world_request.json  hello_world_response.h  hello_world_response.json
samples/avro_http_server_sample/: CMakeLists.txt  avro_http_server_sample.cpp
samples/avro_https_server_sample/: CMakeLists.txt  avro_https_server_sample.cpp
samples/json_spirit_http_server_sample/: CMakeLists.txt  json_spirit_http_server_sample.cpp
